Pass CustomAttributeService test